# mcp-reflect

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  REDESIGN.md  RELEASE.md  docker-compose.yml  pyproject.toml
.github/workflows/: manual-publish.yml  mcp_conformance.yml  publish.yml  pypi-release.yml  test.yml  testpypi-auto-deploy.yml  version-bump.yml
mcp_reflect/: __init__.py  evaluator.py  models.py  server.py
tests/: __init__.py  test_evaluator.py  test_models.py  test_server.py
tests/meta_reflect/: test_reflection.py
